# strategycruncher

./: .gitignore  AUDIT_REPORT_2026-04-01.md  README.md  pyproject.toml
.streamlit/: config.toml
strategy_cruncher/: __init__.py  __main__.py  app.py  column_library_analyzer.py  cruncher.py  enrichment.py  excel_io.py  requirements.txt  run.py  test_cruncher.py  test_logic_regressions.py
tests/: test_excel_and_library.py  test_iterative_indicator_selection.py  test_second_sweep.py  test_third_pass.py
