[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "strategycruncher"
version = "1.0.0"
description = "Backtest optimization and rule discovery tool for trading strategies"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "thanh-cyber" }]
license = { text = "MIT" }
dependencies = [
    "pandas>=2.0,<3",
    "numpy>=1.24",
    "streamlit>=1.28.0",
    "plotly>=5.15.0",
]
keywords = ["trading", "backtesting", "optimization", "quant", "streamlit"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Intended Audience :: Financial and Insurance Industry",
]

[project.scripts]
strategy-cruncher = "strategy_cruncher.run:main"

[tool.setuptools]
packages = ["strategy_cruncher"]

[project.urls]
Homepage = "https://github.com/thanh-cyber/strategycruncher"
Repository = "https://github.com/thanh-cyber/strategycruncher"
